apps/base/bulwark/bulwark.namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bulwark-system
  labels:
    networking.tinyrack.net/isolation: enabled
