apps/base/bulwark/bulwark.ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: bulwark-ingress-route-http
  namespace: bulwark-system
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`webmail.winetree94.com`)
      kind: Rule
      middlewares:
        - name: redirect-to-https
      services:
        - name: bulwark-service
          port: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: bulwark-ingress-route-https
  namespace: bulwark-system
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`webmail.winetree94.com`)
      kind: Rule
      services:
        - name: bulwark-service
          port: 80
  tls:
    secretName: letsencrypt-cert
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-to-https
  namespace: bulwark-system
spec:
  redirectScheme:
    scheme: https
    permanent: true
